# lexical-parser-builder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: build-and-test.yml
flex/: lex.yy.c  lexicalAnalyzerFlex  rules.l
inputs/: LexicalRulesInput.txt  ParserGrammarRules.txt  sourceCodeTest.txt
outputs/: lectureExampleParsingTable.txt  parsingDerivation.txt  parsingTable.txt  sourceCodeTestOutput.txt  symbolTable.txt  transitionTable.txt
src/: AnalyzerMain.cpp  BuilderMain.cpp  CMakeLists.txt  CombinedNFAGenerator.cpp  CombinedNFAGenerator.h  DFAGenerator.cpp  DFAGenerator.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  LexicalUtility.cpp  LexicalUtility.h  NFA.cpp  NFA.h  NFAGenerator.cpp  NFAGenerator.h  RegexScanner.cpp  RegexScanner.h  RunnerMain.cpp  SingleRegexNFA.cpp  SingleRegexNFA.h  TransitionTableContainer.cpp  TransitionTableContainer.h  main.cpp  types.h
src/lexical-analyzer/: LexicalAnalyzer.cpp  LexicalAnalyzer.h
src/lexical-analyzer/dfa/: DFAGenerator.cpp  DFAGenerator.h
src/lexical-analyzer/nfa/: NFA.cpp  NFA.h
src/lexical-analyzer/utilities/: LexicalUtility.cpp  LexicalUtility.h  TransitionTableContainer.cpp  TransitionTableContainer.h  lexicalTypes.h  types.h
src/parser/: ParserAnalyzer.cpp  ParserAnalyzer.h  ParsingAnalyzer.cpp  ParsingAnalyzer.h
src/parser/Grammar/: Grammar.cpp  Grammar.h  GrammarRule.h
src/parser/grammar/: GrammarRule.cpp
src/parser/parsing-table/: ParsingTable.cpp  ParsingTable.h
src/parser/utilities/: Grammar.cpp  Grammar.h  GrammarRule.cpp  GrammarRule.h  GrammarUtility.cpp  GrammarUtility.h  ParserUtility.cpp  ParserUtility.h  ParsingToken.cpp  ParsingToken.h  parsingTypes.h  types.h
testing/: DFAGeneratorTests.cpp  LexicalAnalyzerTests.cpp  ParsingAnalyzerTests.cpp  ParsingFirstFollowSetTests.cpp  ParsingTableTests.cpp  ParsingTokenTests.cpp  TransitionTableContainerTests.cpp
testing/lexical-analyzer-tests/test-1/: output.txt  transitionTable.txt
testing/lexical-analyzer-tests/test-2/: expectedSymbolTable.txt  input.txt  output.txt
testing/parsing-analyzer-tests/output/: additionAndMultiplicationStatement-actual-output.txt  additionStatement-expected-output.txt  containingTwoErrors-expected-output.txt
testing/parsing-table-tests/lecture-example/: expectedTable.txt
testing/parsing-table-tests/simple-testcase/: expectedTable.txt  writtenFile.txt
